frontend/tests/cases/positive/intervalChoice.gr

data Choice a b = OneOf (a [0..1]) (b [0..1]) -- TODO: don't export

choice : forall {a : Type, b : Type} . a [0..1] -> b [0..1] -> Choice a b
choice [x] [y] = OneOf [x] [y]

choose1 : forall {a : Type, b : Type} . Choice a b -> a
choose1 (OneOf [x] [_]) = x

b : Int [1..2] -> Int [0..1] -> Int
b [y] [z] = choose1 (choice [y] [z]) + y